# Pick_and_Go

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  Related.py  app.py  crawl_data.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: app.py
app/models/: __init__.py  model2.py
data/: food_include.csv  hotel_include.csv  lclsSystmCode2.csv  lclsSystmCode3.csv  tour_exclude.csv
db-manage/: README.md  db_setup.py  sigungu.py
locationBasedList2/: main.py
models/: __init__.py  model1.py  model2.py
module/: model1.py
modules/: Filter.py  Image_comparison.py  Manage.py  Picked_sigungu.py  README.md  Related.py  TourAPI.py  __init__.py  db_Manage.py  db_load.py  db_structure.py  get_connection.py  schema.py  suggestion_models.py  suggestion_modes 2.py  suggestion_modes.py  tour_filter.py
modules/recommendation_models/: Count_model.py  Image_based_model.py  __init__.py
modules/tools/: README.md  crawl_data.py  db_setup.py  timer.py
routes/: Pick_n_Go.py  __init__.py  db_test.py  images_show.py  main_service.py  random_api.py  sigungu.py  test.py  total_travel_plan.py
templates/: tour_image.html
test_files/: test.py
tour2025_study/: main.py
