[project]
name = "pick-and-go"
version = "0.1.0"
description = "Pick and Go backend python server's dependencies."
readme = "README.md"
requires-python = ">=3.10.17"
dependencies = [
    "aiomysql>=0.2.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "opencv-python-headless>=4.12.0.88",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "requests>=2.32.4",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "uvicorn>=0.35.0",
]
